--- a/Bookly/Bookly.Infrastructure/Bookly.Infrastructure.csproj
+++ b/Bookly/Bookly.Infrastructure/Bookly.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Bookly.Application\Bookly.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
